rook-ceph/rook-ceph/rgw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-rgw-object-external
  namespace: rook-ceph
  labels:
    app: rook-ceph-rgw
    rook_cluster: rook-ceph
    rook_object_store: object
spec:
  ports:
    - name: rgw
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: rook-ceph-rgw
    rook_cluster: rook-ceph
    rook_object_store: object
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 204.16.243.196
